--- a/y/lesson/index.html
+++ b/y/lesson/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Questions | Get Knowledge</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="/y/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body onkeydown="" style='--percentage:0%'>
