--- a/y/index.html
+++ b/y/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <script src="/script.js"></script>
+  <script src="/y/script.js"></script>
   <div class="cont"><div>It seems like you don't have any questions.&nbsp;<a href="/y/edit">Add more here.</a></div></div>
   <div class="edit" onclick="window.location.href = '/y/edit'"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24" style="fill:#000000;"><path d="M 18 2 L 15.585938 4.4140625 L 19.585938 8.4140625 L 22 6 L 18 2 z M 14.076172 5.9238281 L 3 17 L 3 21 L 7 21 L 18.076172 9.9238281 L 14.076172 5.9238281 z"></path></svg></div>
   <div onclick="window.location.href = '/y/store'" class='coincount' style='cursor: pointer'></div>
