--- a/sub/index.html
+++ b/sub/index.html
@@ -1,1 +1,2 @@
+<title>Thornton Middle Emergency Sub System</title>
 <iframe src="https://sub.churchofthebeloved-ecc.org" style="position:fixed;top:0px;left:0px;height:100%;width:100%;border:none;outline:none;">
