--- a/the-game/index.html
+++ b/the-game/index.html
@@ -13,7 +13,9 @@
 <body>
   <div class='menu'>
     <div class='menu-button' onclick="begin()">Start</div>
+    <div class='menu-button' onclick="settings()">Settings</div>
   </div>
+  <div class="popup"></div>
 </body>
 
 </html>
