--- a/the-game/index.html
+++ b/the-game/index.html
@@ -8,6 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/833cdaff8a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
